feat: objectives - navigation styling

--- a/index.html
+++ b/index.html
@@ -20,29 +20,25 @@
 
   <!-- navigation code here -->
   <div class="navigation-div">
-    <div class="mavigation-content">
+    <div class="navigation-content">
       <div>
-        <h2>SpaceWalkers</h2>
+        <h1>SpaceWalkers</h1>
       </div>
-      <div>
-        <nav>
-          <a href="#">Home</a>
-          <a href="#">About Us</a>
-          <a href="#">Blog</a>
-          <a href="#">Contact</a>
-          <a href="#">Sign in</a>
-        </nav>
-      </div>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+        <a href="#">Sign in</a>
+      </nav>
     </div>
   </div>
-  <nav>
-
-  </nav>
 
   <div class="container home">
 
     <header class="intro">
       <!-- image code here -->
+      <img src="img/main-header.png" alt="Earth's horizon viewed from space">
 
       <h2>Lift Off</h2>
 
