feat: stretch - subscription form

--- a/index.html
+++ b/index.html
@@ -84,6 +84,36 @@
       </div>
 
     </section>
+    <section class="form-section">
+      <form action="">
+        <p>
+          <label>
+            <h2>Take our subscription</h2>
+          </label><br>
+          <select>
+            <option>6 months</option>
+            <option>1 year</option>
+            <option>2 years</option>
+          </select>
+
+        </p>
+        <p>
+          <label for="name">Name</label><br>
+          <input type="text" name="Name" id="name" required>
+        </p>
+        <p>
+          <label for="email">Email</label><br>
+          <input type="email" name="email" id="email" required>
+        </p>
+        <p>
+          <label for="phone">Phone Number</label><br>
+          <input type="tel" name="phone" id="phone">
+        </p>
+        <p>
+          <input type="submit" value="Submit">
+        </p>
+      </form>
+    </section>
 
     <footer>
       <p>Copyright SpaceWalkers 2018</p>
